--- a/.gitattributes
+++ b/.gitattributes
@@ -8,4 +8,6 @@
 
 /.github export-ignore
 CHANGELOG.md export-ignore
-public/* linguist-vendored
+*.js linguist-detectable=false
+*.css linguist-detectable=false
+*.scss linguist-detectable=false
